# PAI

./: .gitignore  README.md  example_resource.txt  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: Build-Test-LintSuggestions.yml  Built and Lint.yml
src/PAI/: PAI.py  Test.py  __init__.py  __main__.py  cli.py  contextmanager.py
src/PAI/commands/: auth.py  chat.py  config.py  models.py  prompt.py  providers.py  test.py
src/PAI/core/: config.py  session.py
src/PAI/docs/: Project_Summary.md
src/PAI/models/: Anthropic_client.py  Gemini_client.py  Huggingface_client.py  OpenAI_client.py  model_registry.py  model_session.py  session.py  systemprompt.py
src/PAI/policies/: policy_registry.py  policy_store.py
src/PAI/resources/: resource_registry.py  resource_store.py  resource_validator.py  resources.json
src/PAI/tools/: __init__.py  tool_registry.py  tool_store.py
src/PAI/utils/: encrypt.py  logger.py  registry_utils.py
tests/: test_PAI.py  test_e2e.py
tests/models/: test_OpenAI_client.py  test_anthropic_client.py  test_model_registry.py  test_model_session.py  test_session.py
tests/resources/: test_resource_registry.py
tests/tools/: test_tool_registry.py  test_tool_store.py
